# financebud

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  PERFORMANCE_OPTIMIZATION.md  README.md  compare_performance.py  consolidate_statements.py  demo_performance.py  main.py  mcp_server.py  optimize_performance.py  optimized_mcp_server.py  package.json  podman-compose-podlab.yml  podman-compose.yml  pyproject.toml  requirements.txt  setup_multi_provider.sh
backend/: config.py  logging_config.py  main.py  main.py.backup
backend/agents/: financial_agent.py  financial_agent_generic.py  financial_tools.py  llm_providers.py  optimized_financial_agent.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  db.py  optimized_db.py
backend/mcp/: client.py  persistent_client.py
frontend/: index.html
tests/: README.md  conftest.py  debug_ollama.py  list_mcp_tools.py  simple_test.py  test_agent.py  test_agent_chat.py  test_agent_direct.py  test_agent_simple.py  test_all_agent_tools.py  test_connection_pool_fix.py  test_database_hanging_debug.py  test_db_hanging_debug.py  test_env_loading.py  test_gemini_connection.py  test_gemini_direct.py  test_llm_loading.py  test_logging.py  test_mcp_connection_debug.py  test_mcp_direct_process.py  test_mcp_recent_transactions.py  test_model_tool_support.py  test_performance.py  test_performance_optimization.py  test_pool_hanging_fix.py  test_production.py  test_providers.py  test_real_tool_pattern.py  test_system.py  test_tool_hanging_debug.py  test_tool_timeout_analysis.py  test_tool_timeout_debug.py  test_tools.py
tests/gemini/: debug_function_names.py  simple_test.py  test_environment.py  test_gemini_fixed.py  test_gemini_llm.py  test_gemini_queries.py  test_gemini_single_tool.py  test_gemini_tools.py
tools/: sqlite_viewer.py
